Building docker into compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,16 @@ services:
     networks:
       - chat
 
-  mongo-express:
-    image: mongo-express
+  backend:
+    container_name: backend
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     restart: always
-    container_name: mongo_ui
     ports:
-      - 8090:8081
+      - 8888:8888
     environment:
-      - ME_CONFIG_BASICAUTH_USERNAME=chat
-      - ME_CONFIG_BASICAUTH_PASSWORD=chatsecret
-      - ME_CONFIG_MONGODB_ADMINUSERNAME=chat
-      - ME_CONFIG_MONGODB_ADMINPASSWORD=chatsecret
-      - ME_CONFIG_MONGODB_URL=mongodb://chat:chatsecret@mongodb:27017/
+      - MONGO_HOST=mongodb
     networks:
       - chat
 
