--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -3,17 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.doodle</groupId>
     <artifactId>backend-service</artifactId>
     <version>0.0.1</version>
-
     <name>Backend service</name>
     <description>Doodle fullstack task - backend service</description>
 
     <parent>
-        <groupId>com.doodle</groupId>
-        <artifactId>fe-challenge</artifactId>
-        <version>0.0.1</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.5.5</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
